// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvironmentMode should render as development mode 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-baseline shrink-0 font-medium rounded border text-sm py-1 px-2 bg-neutral-100 border-neutral-200 text-neutral-400"
      data-accent-color="neutral"
    >
      DEV
    </span>
  </div>
</body>
`;

exports[`EnvironmentMode should render as preview mode 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-baseline shrink-0 font-medium rounded text-purple-500 border text-sm py-1 px-2 bg-purple-50 border-purple-500"
      data-accent-color="purple"
    >
      PREVIEW
    </span>
  </div>
</body>
`;

exports[`EnvironmentMode should render as production mode 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-baseline shrink-0 font-medium rounded text-red-500 border text-sm py-1 px-2 bg-red-50 border-red-500"
      data-accent-color="red"
    >
      PROD
    </span>
  </div>
</body>
`;

exports[`EnvironmentMode should render as staging mode 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-baseline shrink-0 font-medium rounded border text-sm py-1 px-2 bg-neutral-100 border-neutral-200 text-neutral-400"
      data-accent-color="neutral"
    >
      STAGING
    </span>
  </div>
</body>
`;
